k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo           # Is label wale pod ko dhundo
  ports:
  - protocol: TCP
    port: 27017          # Service ka port
    targetPort: 27017    # Pod ka port
  type: ClusterIP        # Sirf cluster ke andar accessible
